--- a/Multiples4/Multiples4/Base.lproj/Main.storyboard
+++ b/Multiples4/Multiples4/Base.lproj/Main.storyboard
@@ -28,22 +28,26 @@
                                     <constraint firstAttribute="width" secondItem="E0t-5U-80v" secondAttribute="height" multiplier="226:121" id="92a-G3-08q"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D8P-Lt-Uag">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What multiple to add by?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D8P-Lt-Uag">
                                 <rect key="frame" x="201" y="285" width="198" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="0W8-zM-8wm"/>
                                     <constraint firstAttribute="width" constant="198" id="2AM-CX-STi"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="it3-Hg-yNP">
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="it3-Hg-yNP" userLabel="playButton">
                                 <rect key="frame" x="164" y="332" width="272" height="268"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="268" id="4FD-PN-hkt"/>
                                     <constraint firstAttribute="width" constant="272" id="YmT-X8-aTi"/>
                                 </constraints>
                                 <state key="normal" image="play"/>
+                                <connections>
+                                    <action selector="onPlayBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ylq-kb-nis"/>
+                                </connections>
                             </button>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Press Add to Add!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jM5-ES-BQc">
                                 <rect key="frame" x="0.0" y="170" width="600" height="60"/>
@@ -51,9 +55,12 @@
                                 <color key="textColor" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0N-Dc-HSx">
+                            <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0N-Dc-HSx" userLabel="addButton">
                                 <rect key="frame" x="192" y="351" width="216" height="119"/>
                                 <state key="normal" image="add"/>
+                                <connections>
+                                    <action selector="onAddBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IaW-al-iEH"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -78,6 +85,13 @@
                             <constraint firstItem="D8P-Lt-Uag" firstAttribute="top" secondItem="E0t-5U-80v" secondAttribute="bottom" constant="76" id="xSt-9i-HfG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addBtn" destination="q0N-Dc-HSx" id="41H-eS-ohI"/>
+                        <outlet property="multipleToAddByTextFld" destination="D8P-Lt-Uag" id="mwj-cl-Tsn"/>
+                        <outlet property="multiplesLogo" destination="E0t-5U-80v" id="WQ6-QV-6hR"/>
+                        <outlet property="playBtn" destination="it3-Hg-yNP" id="Rgq-n2-b4l"/>
+                        <outlet property="pressAddToAddLabel" destination="jM5-ES-BQc" id="KhI-1R-Z04"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
